fix section title-text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ ul {
   font-weight: 500;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: 0.02em;
   /* text-transform: capitalize; */
 }
